--- a/data-analytics/spark/conf/spark-defaults.conf
+++ b/data-analytics/spark/conf/spark-defaults.conf
@@ -33,9 +33,9 @@ spark.master						yarn
 #spark.yarn.am.memory				1024m
 #spark.executor.memory				1024m
 #spark.eventLog.enabled				true
-#spark.eventLog.dir					hdfs://pshp111zatcwi:9000/spark-logs
+#spark.eventLog.dir					hdfs://pshp111:9000/spark-logs
 #spark.history.provider				org.apache.spark.deploy.history.FsHistoryProvider
-#spark.history.fs.logDirectory		hdfs://pshp111zatcwi:9000/spark-logs
+#spark.history.fs.logDirectory		hdfs://pshp111:9000/spark-logs
 #spark.history.fs.update.interval	10s
 #spark.history.ui.port				18080
-spark.yarn.archive					hdfs://pshp111zatcwi:9000/spark/spark-libs-2.4.3.jar
+spark.yarn.archive					hdfs://pshp111:9000/spark/spark-libs-2.4.3.jar
